deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pearl-demo
  namespace: scroll-world
spec:
  selector:
    app: pearl-demo
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
